# swario

./: .ignore  Cargo.toml  README.md
.helix/: languages.toml
codegen/: Cargo.toml
codegen/src/: main.rs  scalar.rs  vector.rs
src/: i16.rs  i32.rs  i64.rs  i8.rs  int.rs  int_macros.rs  lib.rs  macros.rs  u16.rs  u32.rs  u64.rs  u8.rs  uint.rs  uint_macros.rs
